# finger-painting

./: .gitignore  CMakeLists.txt  README.md  clickable.json  finger-painting.content-hub  finger-painting.desktop.in  manifest.json.in
app/: AboutPage.qml  CMakeLists.txt  CanvasPage.qml  ColorPage.qml  ColorPicker.qml  Main.qml  SettingsPage.qml  colors.js  finger-painting.desktop.in
plugins/Utils/: CMakeLists.txt  plugin.cpp  plugin.h  utils.cpp  utils.h
po/: CMakeLists.txt  es.po  finger-painting.bhdouglass.pot  finger-painting.pot  fr.po
qml/: AboutPage.qml  CMakeLists.txt  CanvasPage.qml  Main.qml  colors.js
qml/Components/: BottomBar.qml  BottomBarColor.qml  BottomBarIcon.qml  ColorDialog.qml  OpenDialog.qml  SubBottomBar.qml
